<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="calc">Calcular</string>
    <string name="result">Resultado</string>
    <string name="login">Login</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="cadastro">Cadastrar-se</string>
    <string name="error">Error</string>
    <string name="wrong_user">User not found</string>
    <string name="error_signup">Signup failed, try again</string>
    <string name="historic">Histórico</string>
    <string name="calculator">Calculadora</string>
    <string name="imc">IMC</string>
    <string name="date">DATA</string>
    <string name="addHistoricError">Erro ao adicionar ao historico</string>

</resources>